# tgbot_aiphoto

./: .env.example  README.md  pyproject.toml
src/razdevator/: main.py
src/razdevator/bot/: setup.py
src/razdevator/bot/handlers/admin/: router.py
src/razdevator/bot/handlers/client/: router.py
src/razdevator/bot/keyboards/: admin.py  client.py
src/razdevator/bot/middlewares/: context.py
src/razdevator/bot/states/: admin.py  client.py
src/razdevator/core/: config.py  context.py  enums.py  models.py
src/razdevator/db/: database.py  repositories.py  schema.py
src/razdevator/services/: client_locales.py  generation.py  i18n.py  media.py  payments.py  provisioning.py  runtime.py  screens.py  templates.py  webhook_server.py
src/razdevator/utils/: formatting.py  referral.py
tools/: generate_assets.py
