[project]
name = "razdevator"
version = "0.1.0"
description = "Multi-bot affiliate platform for image-to-video generation built with aiogram and sqlite."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiogram==3.24.0",
    "aiosqlite>=0.20.0,<0.21.0",
    "aiohttp>=3.11,<4",
]

[project.scripts]
razdevator = "razdevator.main:run"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
